force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Committee Associate</fullName>
            </value>
            <value>
                <fullName>Committee Member</fullName>
            </value>
            <value>
                <fullName>Committee Sponsor</fullName>
            </value>
            <value>
                <fullName>Curiosity Team (Student)</fullName>
            </value>
            <value>
                <fullName>Director's Circle</fullName>
            </value>
            <value>
                <fullName>Explorer - Educator</fullName>
            </value>
            <value>
                <fullName>Explorer - Family/Dual</fullName>
            </value>
            <value>
                <fullName>Explorer - Individual</fullName>
            </value>
            <value>
                <fullName>Explorer - Senior</fullName>
            </value>
            <value>
                <fullName>Explorer's Circle</fullName>
            </value>
            <value>
                <fullName>Founder</fullName>
            </value>
            <value>
                <fullName>Leadership Circle</fullName>
            </value>
            <value>
                <fullName>Mariner</fullName>
            </value>
            <value>
                <fullName>New Horizons</fullName>
            </value>
            <value>
                <fullName>Pathfinder</fullName>
            </value>
            <value>
                <fullName>Pioneer</fullName>
            </value>
            <value>
                <fullName>Rover</fullName>
            </value>
            <value>
                <fullName>Scout</fullName>
            </value>
            <value>
                <fullName>Surveyor</fullName>
            </value>
            <value>
                <fullName>Discovery Team</fullName>
            </value>
            <value>
                <fullName>Visionary</fullName>
            </value>
            <value>
                <fullName>Voyager</fullName>
            </value>
            <value>
                <fullName>Explorer - Group</fullName>
            </value>
            <value>
                <fullName>Planetary Academy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>