force-app/main/default/objects/Product2/fields/Offered_as_New_Membership__c.field-meta.xml
<CustomField>
    <fullName>Offered_as_New_Membership__c</fullName>
    <label>Offered as New Membership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Renewal Only</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Not Yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>